--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,49 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#workshop2
+# MySQL Device 1
+DB1_HOST=127.0.0.1
+DB1_PORT=3307
+DB1_DATABASE=workshop
+DB1_USERNAME=workshop_user
+DB1_PASSWORD=password
+
+# MySQL Device 2
+DB2_HOST=127.0.0.1
+DB2_PORT=3308
+DB2_DATABASE=workshop2
+DB2_USERNAME=workshop_user
+DB2_PASSWORD=password
+
+# MySQL Device 3
+DB3_HOST=127.0.0.1
+DB3_PORT=3309
+DB3_DATABASE=workshop2
+DB3_USERNAME=workshop_user
+DB3_PASSWORD=password
+
+# SQL Server (assuming tunnel on 1434)
+DB4_HOST=127.0.0.1
+DB4_PORT=3310
+DB4_DATABASE=workshop
+DB4_USERNAME=root
+DB4_PASSWORD=password
+
+# PostgreSQL
+DB5_HOST=127.0.0.1
+DB5_PORT=5433
+DB5_DATABASE=workshop
+DB5_USERNAME=postgres
+DB5_PASSWORD=password
+#workshop2
+
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=charity_izz
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=workshop
+DB_USERNAME=postgres
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
