--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.7",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
