Fixing navigation bar

--- a/.env.example
+++ b/.env.example
@@ -21,37 +21,37 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 #workshop2
-# MySQL Device 1
+# Hannah
 DB1_HOST=127.0.0.1
 DB1_PORT=3307
 DB1_DATABASE=workshop
 DB1_USERNAME=workshop_user
 DB1_PASSWORD=password
 
-# MySQL Device 2
+# Adam
 DB2_HOST=127.0.0.1
 DB2_PORT=3308
 DB2_DATABASE=workshop2
 DB2_USERNAME=workshop_user
 DB2_PASSWORD=password
 
-# MySQL Device 3
+# Sashvini
 DB3_HOST=127.0.0.1
 DB3_PORT=3309
 DB3_DATABASE=workshop2
 DB3_USERNAME=workshop_user
 DB3_PASSWORD=password
 
-# SQL Server (assuming tunnel on 1434)
+# Izati
 DB4_HOST=127.0.0.1
-DB4_PORT=3310
+DB4_PORT=5433
 DB4_DATABASE=workshop
 DB4_USERNAME=root
 DB4_PASSWORD=password
 
-# PostgreSQL
+# Izz
 DB5_HOST=127.0.0.1
-DB5_PORT=5433
+DB5_PORT=5434
 DB5_DATABASE=workshop
 DB5_USERNAME=postgres
 DB5_PASSWORD=password
