--- a/.env.example
+++ b/.env.example
@@ -57,12 +57,20 @@ DB5_USERNAME=postgres
 DB5_PASSWORD=password
 #workshop2
 
+#DB_PASSWORD=password
+#DB_CONNECTION=pgsql
+#DB_HOST=127.0.0.1
+#DB_PORT=5432
+#DB_DATABASE=workshop
+#DB_USERNAME=postgres
+
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
-DB_DATABASE=workshop
+DB_DATABASE=charity_izz
 DB_USERNAME=postgres
 DB_PASSWORD=password
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
