--- a/.env.example
+++ b/.env.example
@@ -108,3 +108,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# ToyyibPay Payment Gateway Configuration
+# Get your credentials from https://dev.toyyibpay.com or https://toyyibpay.com
+TOYYIBPAY_SECRET_KEY=your-secret-key-here
+TOYYIBPAY_CATEGORY_CODE=your-category-code-here
+TOYYIBPAY_SANDBOX=true
